example/tests/ui/normal.stderr
error: required `example` is not specified

       = help: try `#[ident(example = 2.5)]`
 --> tests/ui/normal.rs:3:10
  |
3 | #[derive(Normal)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Normal` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `conflict_a` conflicts with mutually exclusive `conflict_b`
  --> tests/ui/normal.rs:22:5
   |
22 | #[a(conflict_a = "hey")]
   |     ^^^^^^^^^^

error: `conflict_b` conflicts with mutually exclusive `conflict_a`
  --> tests/ui/normal.rs:23:5
   |
23 | #[b(conflict_b = "hi")]
   |     ^^^^^^^^^^

error: supported fields are `optional_implicit`, `optional_explicit`, `optional_default`, `default`, `conflict_a`, `conflict_b`, `example` and `flag`
  --> tests/ui/normal.rs:27:9
   |
27 | #[ident(hello)]
   |         ^^^^^

error: expected empty attribute
  --> tests/ui/normal.rs:29:9
   |
29 | #[empty(hello)]
   |         ^^^^^

error: expected supported field `field`
  --> tests/ui/normal.rs:28:10
   |
28 | #[single(hello)]
   |          ^^^^^
